--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-	min-height: 960px;
+	min-height: 2000px;
 }
 
 #camera {
@@ -40,11 +40,11 @@ path {
 
 #imgSliderContainer {
 	z-index: 0;
-	position: relative;
-	width: 312px;
-	height: 248px;
-	margin-left: 17%;
-	margin-top: 42%;
+	position: fixed;
+	left: 652px;
+	top: 576px;
+	bottom: auto;
+	right: auto;
 }
 
 #imgSliderContainer div{
