--- a/camera-2/css/main.css
+++ b/camera-2/css/main.css
@@ -99,7 +99,7 @@ html, body, #timeline-container {
     min-height: 900px;
     overflow: hidden;
     background-color: #3498db;
-    
+    position: relative;
 }
 
 body {
@@ -116,8 +116,12 @@ body {
 }
 /* how to vertical align this item */
 #centerContainer {
-    margin-top: 3em;
-    position: fixed;
+    width: 800px;
+    height: 800px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -400px 0 0 -400px;
 }
 
 #cameraContainer {
