--- a/camera-2/css/main.css
+++ b/camera-2/css/main.css
@@ -135,6 +135,11 @@ html, body{
     overflow-x: hidden;
 }
 
+#imgContainer {
+    width: 100%;
+    height: 100%;
+}
+
 path {
     stroke: white;
 }
