--- a/camera/css/main.css
+++ b/camera/css/main.css
@@ -208,6 +208,15 @@ body {
     transform: rotateX(-90deg) translateZ(-16px);
 }
 
+.active span {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+}
+
+
 .flipTOBottom {
     -webkit-transform: rotateX(90deg) translateZ(-15px);
     transform: rotateX(90deg) translateZ(-15px);
