--- a/camera/css/main.css
+++ b/camera/css/main.css
@@ -148,6 +148,10 @@ html, body{
     height: 100%;
 }
 
+#imgContainer img {
+  width: 100%;
+}
+
 path {
     stroke: white;
 }
@@ -235,6 +239,12 @@ body {
     fill: #3498db;
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    margin: 0 auto;
+    width: 200px;
+}
 
 /* ==========================================================================
    Helper classes
