--- a/camera/css/main.css
+++ b/camera/css/main.css
@@ -130,7 +130,8 @@ html, body{
     top: 66.5%;
     left: 34%;
     margin: -124px 0 0 -160px;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #imgContainer {
@@ -147,9 +148,9 @@ html, body{
     height: 100%;
 }
 
-#imgContainer img {
-  width: 100%;
-  height: 100%;
+#imgContainer img{
+    width: 100%;
+    height: 100%;
 }
 
 path {
@@ -239,12 +240,6 @@ body {
     fill: #3498db;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    margin: 0 auto;
-    width: 200px;
-}
 
 /* ==========================================================================
    Helper classes
