--- a/camera/css/main.css
+++ b/camera/css/main.css
@@ -131,9 +131,7 @@ html, body{
     left: 34%;
     margin: -124px 0 0 -160px;
     -ms-overflow-style: none; /* for IE 10+ */
-    overflow-y: scroll;
-    overflow-x: hidden;
-    
+    overflow: hidden;
 }
 
 #imgContainer {
