--- a/camera/css/main.css
+++ b/camera/css/main.css
@@ -240,6 +240,10 @@ body {
     fill: #3498db;
 }
 
+footer {
+    text-align: center;
+}
+
 
 /* ==========================================================================
    Helper classes
