--- a/camera/css/main.css
+++ b/camera/css/main.css
@@ -98,6 +98,8 @@ html, body{
     height: 100vh;
     background-color: #3498db;
     position: relative;
+    padding: 0;
+    margin: 0;
 }
 
 /* how to vertical align this item */
@@ -242,6 +244,13 @@ body {
 
 footer {
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-color: #FFF;
+    height: 27px;
+    padding: 5px;
 }
 
 
