--- a/camera/css/main.css
+++ b/camera/css/main.css
@@ -100,6 +100,7 @@ html, body{
     position: relative;
     padding: 0;
     margin: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* how to vertical align this item */
@@ -111,7 +112,7 @@ html, body{
     top: 50%;
     left: 50%;
     margin: -310px 0 0 -402px;
-    font-family: 'Open Sans', sans-serif;
+   
 }
 
 #timelineContainer {
@@ -247,10 +248,8 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 40px;
-    background-color: #FFF;
     height: 27px;
-    padding: 5px;
+    color: #fff;
 }
 
 
