--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -29,6 +29,7 @@
 body {
   font-family: 'Playfair Display', serif;
   color: #545863;
+  /* Background pattern from subtlepatterns.com */
   background-image: url("../img/lightpaperfibers.png"); }
 
 html, body {
@@ -63,9 +64,6 @@ section {
   height: 100%;
   width: 100%;
   position: relative; }
-
-#portfolio {
-  border: 1px solid red; }
 
 footer {
   text-align: center; }
@@ -270,7 +268,7 @@ rect.rect {
   position: absolute;
   width: 100%;
   max-height: 600px;
-  bottom: 20px; }
+  bottom: 10px; }
 
 .intro {
   position: absolute;
@@ -333,7 +331,7 @@ body {
   display: table-cell;
   width: 120px;
   height: 180px;
-  margin: 4em; }
+  margin: 3em; }
   .bottle:first-child {
     margin-left: 0; }
   .bottle:last-child {
@@ -442,7 +440,7 @@ body {
       width: 100%;
       height: 100%;
       text-align: center;
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: bold; }
 
 .table-container {
@@ -458,7 +456,7 @@ body {
   perspective: 300px; }
 
 .table {
-  border: 3px solid #fff568;
+  background: #fff568;
   width: 100%;
   height: 100%;
   -webkit-transform: rotateX(45deg);
@@ -475,3 +473,42 @@ svg#rects-04 {
   margin-left: -10px; }
   svg#rects-04 rect {
     stroke: #6dcff6; }
+
+.portfolio-container {
+  height: 100%;
+  background-image: url("../img/blue-bg.png");
+  background-color: #6dcff6;
+  padding-top: 6%; }
+  .portfolio-container .portfolio-title {
+    color: #fff; }
+
+.portfolio-categories-container {
+  position: relative; }
+  .portfolio-categories-container .portfolio-categories {
+    height: 420px;
+    border: 1px solid red;
+    margin-right: 4em;
+    margin-top: 1em;
+    background: #FFF; }
+
+#portfolio:before, #skills:after {
+  content: "";
+  display: block;
+  width: 100%;
+  background-clip: padding-box;
+  border-style: solid;
+  border-image-source: url("../img/blue-wave.svg");
+  border-image-slice: 100% 0 0 0;
+  border-image-width: 32px 0 0 0;
+  border-image-outset: 0;
+  border-image-repeat: repeat stretch;
+  border-width: 32px 0 0; }
+
+#portfolio:before {
+  background-color: #6dcff6;
+  border-color: #6dcff6; }
+
+#skills:after {
+  background-color: #6dcff6;
+  border-color: #6dcff6;
+  border-image-source: url("../img/yellow-wave.svg"); }
