--- a/portfolio/css/main.scss
+++ b/portfolio/css/main.scss
@@ -32,6 +32,7 @@ $pale-sky: #6b717f;
 body {
 	font-family: 'Playfair Display', serif;
 	color: darken($pale-sky, 10);
+	/* Background pattern from subtlepatterns.com */
 	background-image: url('../img/lightpaperfibers.png');
 }
 
@@ -72,9 +73,6 @@ section {
 	position: relative;
 }
 
-#portfolio {
-	border: 1px solid red;
-}
 
 footer {
 	text-align: center;
@@ -306,7 +304,7 @@ $easing: cubic-bezier(.6, .05, .28, .91);
 		position: absolute;
 		width: 100%;
 		max-height: 600px;
-		bottom: 20px;
+		bottom: 10px;
 	}
 }
 
@@ -381,7 +379,7 @@ body{
 	display: table-cell;
 	width: 120px;
 	height: 180px;
-	margin: 4em;
+	margin: 3em;
 	&:first-child{
 		margin-left: 0;
 	}
@@ -489,12 +487,13 @@ body{
       width: 100%;
       height: 100%;
       text-align: center;
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: bold;
     }
   }
 }
 
+//table under the bottles
 .table-container{
 	height: 100px;
 	width: 83%;
@@ -507,7 +506,7 @@ body{
 }
 
 .table{
-	border: 3px solid $yellow;
+	background: $yellow;
 	width: 100%;
 	height: 100%;
 	-webkit-transform: rotateX(45deg); 
@@ -520,7 +519,7 @@ body{
 	position: absolute;
 }
 
-
+//blue drop svg
 svg#rects-04{
 	position: relative;
 	width: 55px;
@@ -528,4 +527,50 @@ svg#rects-04{
 	rect{
 		stroke: $blue;
 	}
+}
+
+//portfolio page
+.portfolio-container{
+	height: 100%;
+	background-image: url('../img/blue-bg.png');
+	background-color: $blue;
+	padding-top: 6%;
+	.portfolio-title{
+		color: #fff;
+	}
+}
+
+.portfolio-categories-container{
+	position: relative;
+	.portfolio-categories{
+		height: 420px;
+		border: 1px solid red;
+		margin-right: 4em;
+		margin-top: 1em;
+		background: #FFF;
+		
+	}
+}
+
+#portfolio:before, #skills:after{
+	content:"";
+	display: block;
+	width: 100%;
+	background-clip: padding-box;
+	border-style: solid;
+	border-image-source: url('../img/blue-wave.svg');
+	border-image-slice: 100% 0 0 0;
+	border-image-width: 32px 0 0 0;
+	border-image-outset: 0;
+	border-image-repeat: repeat stretch;
+	border-width: 32px 0 0;	
+}
+#portfolio:before{
+	background-color: $blue;
+	border-color: $blue;
+}
+#skills:after{
+	background-color: $blue;
+	border-color: $blue;
+	border-image-source: url('../img/yellow-wave.svg');
 }
