--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -68,6 +68,9 @@ section {
   width: 100%;
   position: relative; }
 
+#photography .col-md-offset-1 {
+  border: 1px solid red; }
+
 footer {
   text-align: center; }
 
@@ -186,7 +189,7 @@ rect.rect {
   margin-bottom: 1em; }
 
 #nav-icon {
-  position: absolute;
+  position: fixed;
   z-index: 500;
   top: 2em;
   left: 3%;
@@ -259,13 +262,29 @@ rect.rect {
   #nav-items .nav-item {
     position: relative;
     cursor: pointer;
-    padding: 15px 35px;
-    -webkit-transition: all 250ms;
-            transition: all 250ms; }
+    padding: 15px 35px; }
+    #nav-items .nav-item:after {
+      width: 0;
+      height: 3px;
+      content: " ";
+      background-color: #fff;
+      position: absolute;
+      left: 25%;
+      transition: all 0.3s ease-in-out;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      top: 75%; }
     #nav-items .nav-item:hover {
-      color: #6dcff6;
-      -webkit-transition: all 250ms ease-in;
-              transition: all 250ms ease-in; }
+      transition: all 0.3s ease-in-out;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out; }
+      #nav-items .nav-item:hover:after {
+        width: 38%;
+        left: 8%; }
 
 .tilt-mountain img {
   position: absolute;
@@ -467,7 +486,6 @@ body {
 
 .skills-title {
   top: 19%;
-  left: 8%;
   position: absolute; }
 
 svg#rects-04 {
@@ -481,9 +499,10 @@ svg#rects-04 {
   height: 100%;
   background-image: url("../img/blue-bg.png");
   background-color: #6dcff6;
-  padding-top: 2%; }
-  .portfolio-container .portfolio-title {
-    color: #fff; }
+  padding-top: 4%; }
+
+#portfolio .row:nth-child(1) {
+  margin-top: -1%; }
 
 .portfolio-categories-container {
   margin: 40px auto 120px;
@@ -533,7 +552,10 @@ svg#rects-04 {
   float: left;
   width: 100%;
   height: 100%;
-  color: #333; }
+  color: #333;
+  box-shadow: 3px 3px 0px 1px rgba(255, 245, 104, 0.6);
+  -webkit-transition: box-shadow 0.3s ease;
+          transition: box-shadow 0.3s ease; }
 .portfolio-categories figure {
   position: relative;
   overflow: hidden;
@@ -543,7 +565,7 @@ svg#rects-04 {
     display: block;
     width: 100%;
     height: 100%;
-    opacity: 0.9;
+    opacity: 0.8;
     -webkit-transition: opacity 0.3s;
     transition: opacity 0.3s; }
   .portfolio-categories figure button {
@@ -557,7 +579,7 @@ svg#rects-04 {
     top: 50%;
     left: 50%;
     border: 3px solid transparent;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 245, 104, 0.9);
     color: #545863;
     opacity: 0;
     -webkit-transform: translateY(-50%) translateX(-50%) scale(0.25);
@@ -598,14 +620,16 @@ svg#rects-04 {
       -ms-transform: translateY(50px);
           transform: translateY(50px); }
 
-.portfolio-categories a:hover figure img {
-  opacity: 1; }
-.portfolio-categories a:hover figure button {
-  opacity: 1;
-  -webkit-transform: translateY(-50%) translateX(-50%) scale(1);
-      -ms-transform: translateY(-50%) translateX(-50%) scale(1);
-          transform: translateY(-50%) translateX(-50%) scale(1); }
-.portfolio-categories a:hover figcaption h2 {
-  -webkit-transform: translateY(0);
-      -ms-transform: translateY(0);
-          transform: translateY(0); }
+.portfolio-categories a:hover {
+  box-shadow: none; }
+  .portfolio-categories a:hover figure img {
+    opacity: 1; }
+  .portfolio-categories a:hover figure button {
+    opacity: 1;
+    -webkit-transform: translateY(-50%) translateX(-50%) scale(1);
+        -ms-transform: translateY(-50%) translateX(-50%) scale(1);
+            transform: translateY(-50%) translateX(-50%) scale(1); }
+  .portfolio-categories a:hover figcaption h2 {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0); }
